fixed menu button for mobile

--- a/index.html
+++ b/index.html
@@ -75,17 +75,6 @@
     </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.min.js"></script>
-    <script>
-        requirejs.config({
-            paths: {
-                jquery: 'https://code.jquery.com/jquery-3.6.0.min',
-                app: 'app'
-            }
-        });
-
-        requirejs(['app'], function(app) {
-            app.init();
-        });
-    </script>
+    <script src="main.js"></script>
 </body>
 </html>
