--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>ЄСтендап Кьольн</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="favicon.png">
 </head>
 <body>
     <header>
