Added 2 events Added style for favorite events Added a link to instagram

--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
                         <a href="https://chat.whatsapp.com/BXBNeksXPrJ29btgeo9BZZ" target="_blank">
                             <img src="whatsapp-icon.svg" alt="WhatsApp icon" width="40" height="40">
                         </a>
+                        <a href="https://www.instagram.com/yestandup_cologne/" target="_blank">
+                            <img src="instagram-icon.svg" alt="Instagram icon" width="40" height="40">
+                        </a>
                     </div>
                 </div>
             </div>
