--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <title>ЄСтендап Кьольн</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="icon" type="image/png" href="favicon.svg">
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-lg custom-navbar">
             <a class="navbar-brand" href="#">
-                <img src="logo.png" alt="ЄСтендап Кьольн лого" width="50" height="50">
+                <img src="logo.webp" alt="ЄСтендап Кьольн лого" width="50" height="50">
                 <span class="club-name text-white">ЄСтендап Кьольн</span>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -49,7 +49,7 @@
             <h2 class="section-title">Про нас</h2>
             <div class="row">
                 <div class="col-md-6">
-                    <img src="logo.png" alt="Logo" class="img-fluid">
+                    <img src="logo.webp" alt="Logo" class="img-fluid">
                 </div>
                 <div class="col-md-6">
                     <div id="about-us-content"></div>
