added id to events

--- a/prerendered-index.html
+++ b/prerendered-index.html
@@ -35,7 +35,7 @@
     <main>
         <section id="upcoming-events" class="container">
             <h2 class="section-title">Майбутні події</h2>
-            <div id="events-container"><div class="event favorite-event">
+            <div id="openMic-1" id="events-container"><div class="event favorite-event">
                 <h3>Перший український відкритий мікрофон у Кельні</h3>
                 <p><strong>Дата:</strong> 04.06.2024</p>
                 <p><strong>Час:</strong> 19:00</p>
@@ -43,7 +43,7 @@
                 <p></p><p>Запрошуємо всіх охочих взяти участь у першому українському відкритому мікрофоні у Кельні!</p><ul><li>Виступити може кожен бажаючий безкоштовно.</li><li>Для участі потрібно заповнити <a href="https://forms.gle/1w1J6xF9m9JD37Fk9">гугл форму</a>.</li><li>Долучайтесь до нашого <a href="https://chat.whatsapp.com/BXBNeksXPrJ29btgeo9BZZ" target="_blank">чату у WhatsApp</a> для різних обговорень та оголошень.</li></ul><p>Вхід для глядачів: 5 євро. 100% виручки йде на підтримку ЗСУ.</p><p>Квитки можна придбати <a href="https://heylink.me/de_ua_kult/" target="_blank">тут</a>.</p><p></p>
                 <img src="openMic1.webp" alt="Перший український відкритий мікрофон у Кельні">
                 
-            </div><div class="event">
+            </div><div id="meeting-2" class="event">
                 <h3>Друга читка</h3>
                 <p><strong>Дата:</strong> 12.05.2024</p>
                 <p><strong>Час:</strong> 17:00</p>
@@ -56,7 +56,7 @@
 
         <section id="past-events" class="container">
             <h2 class="section-title">Минулі події</h2>
-            <div id="past-events-container"><div class="event">
+            <div id="past-events-container"><div id="meeting-1" class="event">
                 <h3>Перша зустріч</h3>
                 <p><strong>Дата:</strong> 20.04.2024</p>
                 <p><strong>Час:</strong> 17:00</p>
