-added section with other Ukrainian stand up clubs in Europe -moved images to img folder

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ЄСтендап Кьольн</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/png" href="favicon.svg">
+    <link rel="icon" type="image/png" href="img/favicon.svg">
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-lg custom-navbar">
             <a class="navbar-brand" href="#">
-                <img src="logo.webp" alt="ЄСтендап Кьольн лого" width="50" height="50">
+                <img src="img/logo.webp" alt="ЄСтендап Кьольн лого" width="50" height="50">
                 <span class="club-name text-white">ЄСтендап Кьольн</span>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -48,12 +48,17 @@
             <h2 class="section-title">Про нас</h2>
             <div class="row">
                 <div class="col-md-6">
-                    <img src="logo.webp" alt="Logo" class="img-fluid">
+                    <img src="img/logo.webp" alt="Logo" class="img-fluid">
                 </div>
                 <div class="col-md-6">
                     <div id="about-us-content"></div>
                 </div>
             </div>
+        </section>
+
+        <section id="other-clubs" class="container">
+            <h2 class="section-title">Інші українські стендап-клуби в Європі</h2>
+            <div id="other-clubs-container"></div>
         </section>
     </main>
 
@@ -66,10 +71,10 @@
                 <div class="col-md-6">
                     <div class="social-media text-right">
                         <a href="https://chat.whatsapp.com/BXBNeksXPrJ29btgeo9BZZ" target="_blank">
-                            <img src="whatsapp-icon.svg" alt="WhatsApp icon" width="40" height="40">
+                            <img src="img/whatsapp-icon.svg" alt="WhatsApp icon" width="40" height="40">
                         </a>
                         <a href="https://www.instagram.com/yestandup_cologne/" target="_blank">
-                            <img src="instagram-icon.svg" alt="Instagram icon" width="40" height="40">
+                            <img src="img/instagram-icon.svg" alt="Instagram icon" width="40" height="40">
                         </a>
                     </div>
                 </div>
