--- a/prerendered-index.html
+++ b/prerendered-index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html><html lang="uk"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="ЄСтендап Кьольн - спільнота українських стендап-коміків у Кельні. Відкриті мікрофони, читки, розвиток української комедії.">
     <title>ЄСтендап Кьольн</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="img/favicon.svg">
@@ -86,11 +87,11 @@
 
         <h2>Наші заходи</h2>
 
-        <h4>1. Відкритий мікрофон</h4>
+        <h3 class="smaller-heading">1. Відкритий мікрофон</h3>
 
         <p>З радістю повідомляємо, що наш перший вечір відкритого мікрофону відбудеться 4 червня 2024 року! Це неймовірна можливість для людей, які готові спробувати свої сили у стендапі, познайомитися з однодумцями та отримати безцінний досвід виступів перед живою аудиторією. Наступні вечори відкритого мікрофону проводитимуться в залежності від готовності та кількості охочих виступити, тож слідкуйте за нашими анонсами та не пропустіть шанс стати частиною української комедійної сцени!</p>
 
-        <h4 id="punch-up-session">2. Читки</h4>
+        <h3 class="smaller-heading" id="punch-up-session">2. Читки</h3>
 
         <p>Для тих, хто прагне розвинути свій комедійний талант та відточити майстерність, ми створили щотижневі читки. Це затишні зустрічі, де ви можете поділитися своїми ідеями та напрацюваннями, отримати відгуки і поради від інших стендаперів та разом попрацювати над їх вдосконаленням. Приєднуйтесь до нашої дружньої та підтримуючої спільноти щонеділі, щоб крок за кроком наближатися до своєї мрії та розкрити свій комедійний потенціал!</p>
 
