--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="ЄСтендап Кьольн - спільнота українських стендап-коміків у Кельні. Відкриті мікрофони, читки, розвиток української комедії.">
-    <title>ЄСтендап Кьольн</title>
+    <meta name="description" content="У Стендап - український стендап у Кельні. Відкриті мікрофони, читки, розвиток української комедії.">
+    <title>У Стендап</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="img/favicon.svg">
 </head>
@@ -12,8 +12,8 @@
     <header>
         <nav class="navbar navbar-expand-lg custom-navbar">
             <a class="navbar-brand" href="#">
-                <img src="img/logo.webp" alt="ЄСтендап Кьольн лого" width="50" height="50">
-                <span class="club-name text-white">ЄСтендап Кьольн</span>
+                <img src="img/logo.webp" alt="У Стендап лого" width="50" height="50">
+                <span class="club-name text-white">У Стендап</span>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -67,14 +67,14 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <p>&copy; 2024 ЄСтендап Кьольн. Усі права захищені.</p>
+                    <p>&copy; 2024 У Стендап. Усі права захищені.</p>
                 </div>
                 <div class="col-md-6">
                     <div class="social-media text-right">
                         <a href="https://chat.whatsapp.com/BXBNeksXPrJ29btgeo9BZZ" target="_blank">
                             <img src="img/whatsapp-icon.svg" alt="WhatsApp icon" width="40" height="40">
                         </a>
-                        <a href="https://www.instagram.com/yestandup_cologne/" target="_blank">
+                        <a href="https://www.instagram.com/u_standup_cologne/" target="_blank">
                             <img src="img/instagram-icon.svg" alt="Instagram icon" width="40" height="40">
                         </a>
                     </div>
