--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-lg custom-navbar">
             <a class="navbar-brand" href="#">
-                <img src="img/logo.webp" alt="У Стендап лого" width="50" height="50">
+                <img src="img/logo.png" alt="У Стендап лого" width="50" height="50">
                 <span class="club-name text-white">У Стендап</span>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -49,7 +49,7 @@
             <h2 class="section-title">Про нас</h2>
             <div class="row">
                 <div class="col-md-6">
-                    <img src="img/logo.webp" alt="Logo" class="img-fluid">
+                    <img src="img/About us logo.png" alt="Logo" class="img-fluid">
                 </div>
                 <div class="col-md-6">
                     <div id="about-us-content"></div>
