--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <header>
         <nav class="navbar navbar-expand-lg custom-navbar">
             <a class="navbar-brand" href="#">
-                <img src="img/logo.png" alt="У Стендап лого" width="50" height="50">
-                <span class="club-name text-white">У Стендап</span>
+                <img src="img/logo.png" alt="У Стендап лого" width="120" height="50">
+                <span class="club-name text-white">український стендап у Кельні</span>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
