--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
             <div class="container">
                 <a class="navbar-brand d-flex flex-column flex-lg-row align-items-lg-center" href="#">
                     <img src="img/logo.png" alt="У Стендап лого" width="120" height="50">
-                    <span class="club-name text-white mt-2 mt-lg-0 ml-lg-2">український стендап у Кельні</span>
+                    <span class="club-name text-white mt-2 mt-lg-0 ms-lg-2">український стендап у Кельні</span>
                 </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ml-auto">
+                    <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
                             <a class="nav-link text-white py-2" href="#upcoming-events">Майбутні події</a>
                         </li>
@@ -76,7 +76,7 @@
                     <p>&copy; 2024 У Стендап. Усі права захищені.</p>
                 </div>
                 <div class="col-md-6">
-                    <div class="social-media text-right">
+                    <div class="social-media text-end">
                         <a href="https://chat.whatsapp.com/BXBNeksXPrJ29btgeo9BZZ" target="_blank">
                             <img src="img/whatsapp-icon.svg" alt="WhatsApp icon" width="40" height="40">
                         </a>
@@ -89,13 +89,10 @@
         </div>
     </footer>
 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.min.js"></script>
     <script src="main.js"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
 </body>
 
