--- a/index.html
+++ b/index.html
@@ -11,88 +11,87 @@
     <link rel="icon" type="image/png" href="img/favicon.svg">
 </head>
 
-<body>
-    <header>
-        <nav class="navbar navbar-expand-lg custom-navbar">
-            <div class="container">
-                <a class="navbar-brand d-flex flex-column flex-lg-row align-items-lg-center" href="#">
-                    <img src="img/logo.png" alt="У Стендап лого" width="120" height="50">
-                    <span class="club-name text-white mt-2 mt-lg-0 ms-lg-2">український стендап у Кельні</span>
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item">
-                            <a class="nav-link text-white py-2" href="#upcoming-events">Майбутні події</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white py-2" href="#past-events">Минулі події</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white py-2" href="#about-us">Про нас</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
-
-    <main>
-        <section id="upcoming-events" class="container">
-            <h2 class="section-title">Майбутні події</h2>
-            <div id="events-container"></div>
-        </section>
-
-        <section id="past-events" class="container">
-            <h2 class="section-title">Минулі події</h2>
-            <div id="past-events-container"></div>
-        </section>
-
-        <section id="about-us" class="container">
-            <h2 class="section-title">Про нас</h2>
-            <div class="row">
-                <div class="col-md-6">
-                    <img src="img/About us logo.png" alt="Logo" class="img-fluid">
-                </div>
-                <div class="col-md-6">
-                    <div id="about-us-content"></div>
-                </div>
-            </div>
-        </section>
-
-        <section id="other-clubs" class="container">
-            <h2 class="section-title">Інші українські стендап-клуби в Європі</h2>
-            <div id="other-clubs-container"></div>
-        </section>
-    </main>
-
-    <footer>
+<header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <p>&copy; 2024 У Стендап. Усі права захищені.</p>
-                </div>
-                <div class="col-md-6">
-                    <div class="social-media text-end">
-                        <a href="https://chat.whatsapp.com/BXBNeksXPrJ29btgeo9BZZ" target="_blank">
-                            <img src="img/whatsapp-icon.svg" alt="WhatsApp icon" width="40" height="40">
-                        </a>
-                        <a href="https://www.instagram.com/u_standup_cologne/" target="_blank">
-                            <img src="img/instagram-icon.svg" alt="Instagram icon" width="40" height="40">
-                        </a>
-                    </div>
+            <a class="navbar-brand d-flex flex-column flex-lg-row align-items-lg-center" href="#">
+                <img src="img/logo.png" alt="У Стендап лого" width="120" height="50" class="d-inline-block align-top">
+                <span class="fs-5 fw-bold ms-lg-2">український стендап у Кельні</span>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#upcoming-events">Майбутні події</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#past-events">Минулі події</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#about-us">Про нас</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+</header>
+
+<main>
+    <section id="upcoming-events" class="container">
+        <h2 class="section-title">Майбутні події</h2>
+        <div id="events-container"></div>
+    </section>
+
+    <section id="past-events" class="container">
+        <h2 class="section-title">Минулі події</h2>
+        <div id="past-events-container"></div>
+    </section>
+
+    <section id="about-us" class="container">
+        <h2 class="section-title">Про нас</h2>
+        <div class="row">
+            <div class="col-md-6">
+                <img src="img/About us logo.png" alt="Logo" class="img-fluid">
+            </div>
+            <div class="col-md-6">
+                <div id="about-us-content"></div>
+            </div>
+        </div>
+    </section>
+
+    <section id="other-clubs" class="container">
+        <h2 class="section-title">Інші українські стендап-клуби в Європі</h2>
+        <div id="other-clubs-container"></div>
+    </section>
+</main>
+
+<footer>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <p>&copy; 2024 У Стендап. Усі права захищені.</p>
+            </div>
+            <div class="col-md-6">
+                <div class="social-media text-end">
+                    <a href="https://chat.whatsapp.com/BXBNeksXPrJ29btgeo9BZZ" target="_blank">
+                        <img src="img/whatsapp-icon.svg" alt="WhatsApp icon" width="40" height="40">
+                    </a>
+                    <a href="https://www.instagram.com/u_standup_cologne/" target="_blank">
+                        <img src="img/instagram-icon.svg" alt="Instagram icon" width="40" height="40">
+                    </a>
                 </div>
             </div>
         </div>
-    </footer>
+    </div>
+</footer>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.min.js"></script>
-    <script src="main.js"></script>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.7/require.min.js"></script>
+<script src="main.js"></script>
 
 </body>
 
