fix date of winter standup

--- a/ThankYouPage/WinterStandUp/PaymentUnsuccessful/Index.html
+++ b/ThankYouPage/WinterStandUp/PaymentUnsuccessful/Index.html
@@ -311,7 +311,7 @@ body {
             <div class="help-section">
                 <h3>❄️ Деталі події</h3>
                 <p><strong>Зимовий Стендап</strong><br>
-                21 грудня 2025 о 19:00<br>
+                15 грудня 2025, двері 18:45, початок 19:30<br>
                 Theatercafé Filmdose, Köln<br>
                 <a href="https://maps.app.goo.gl/BPHbnNLBU87iRAmM9" target="_blank" class="contact-link">📍 Zülpicher Str. 39, 50674 Köln</a></p>
             </div>
