--- a/ThankYouPage/WinterStandUp/index.html
+++ b/ThankYouPage/WinterStandUp/index.html
@@ -805,11 +805,15 @@ body {
                 </div>
                 <div class="detail-item">
                     <span class="detail-label">Дата:</span>
-                    <span class="detail-value">21 грудня 2025</span>
+                    <span class="detail-value">15 грудня 2025</span>
                 </div>
                 <div class="detail-item">
-                    <span class="detail-label">Час:</span>
-                    <span class="detail-value">19:00</span>
+                    <span class="detail-label">Двері:</span>
+                    <span class="detail-value">18:45</span>
+                </div>
+                <div class="detail-item">
+                    <span class="detail-label">Початок:</span>
+                    <span class="detail-value">19:30</span>
                 </div>
                 <div class="detail-item">
                     <span class="detail-label">Місце:</span>
@@ -981,7 +985,7 @@ class FallingSnowflakes {
 // ==========================================
 
 const SHARE_URL = 'https://secure.wayforpay.com/payment/winterstandup';
-const SHARE_TEXT = '❄️ Приєднуйся до Зимового Стендапу у Кельні! 21 грудня о 19:00. Український стендап, гарна атмосфера та море сміху!';
+const SHARE_TEXT = '❄️ Приєднуйся до Зимового Стендапу у Кельні! 15 грудня о 19:30. Український стендап, гарна атмосфера та море сміху!';
 
 function shareToTelegram() {
     const url = encodeURIComponent(SHARE_URL);
