add cloudflare insights

--- a/ThankYouPage/WinterStandUp/PaymentUnsuccessful/Index.html
+++ b/ThankYouPage/WinterStandUp/PaymentUnsuccessful/Index.html
@@ -386,5 +386,8 @@ if (urlParams.reason || urlParams.reasonCode) {
     console.log('Причина помилки:', { reason: urlParams.reason, reasonCode: urlParams.reasonCode });
 }
     </script>
+<!-- Cloudflare Web Analytics -->
+<script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "e9e3d01d906d4f06946bb1f72ba15410"}'></script>
+<!-- End Cloudflare Web Analytics -->
 </body>
 </html>
