--- a/ThankYouPage/WinterStandUp/index.html
+++ b/ThankYouPage/WinterStandUp/index.html
@@ -1106,5 +1106,8 @@ document.addEventListener('DOMContentLoaded', () => {
     console.log('❄️ Thank You Page завантажено успішно!');
 });
     </script>
+<!-- Cloudflare Web Analytics -->
+<script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "e9e3d01d906d4f06946bb1f72ba15410"}'></script>
+<!-- End Cloudflare Web Analytics -->
 </body>
 </html>
