--- a/ThankYouPage/WinterStandUp/index.html
+++ b/ThankYouPage/WinterStandUp/index.html
@@ -8,8 +8,8 @@
     <meta name="description" content="Дякуємо за купівлю квитка на Зимовий Стендап у Кельні">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="/img/favicon-full.png">
-    <link rel="shortcut icon" type="image/png" href="/img/favicon-full.png">
+    <link rel="icon" type="image/png" href="/img/favicon-full.webp">
+    <link rel="shortcut icon" type="image/png" href="/img/favicon-full.webp">
 
     <!-- Cloudflare Web Analytics -->
     <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "e9e3d01d906d4f06946bb1f72ba15410"}'></script>
