--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container">
             <a class="navbar-brand d-flex flex-column flex-lg-row align-items-lg-center" href="#">
-                <img src="img/logo.png" alt="У Стендап лого" width="120" height="50" class="d-inline-block align-top">
+                <img src="img/logo.webp" alt="У Стендап лого" width="120" height="50" class="d-inline-block align-top">
                 <span class="fs-5 fw-bold ms-lg-2">український стендап у Кельні</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -54,7 +54,7 @@
         <h2 class="section-title">Про нас</h2>
         <div class="row">
             <div class="col-md-6">
-                <img src="img/About us logo.png" alt="Logo" class="img-fluid">
+                <img src="img/About us logo.webp" alt="Logo" class="img-fluid">
             </div>
             <div class="col-md-6">
                 <div id="about-us-content"></div>
