--- a/prerendered-index.html
+++ b/prerendered-index.html
@@ -12,7 +12,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container">
             <a class="navbar-brand d-flex flex-column flex-lg-row align-items-lg-center" href="#">
-                <img src="img/logo.png" alt="У Стендап лого" width="120" height="50" class="d-inline-block align-top">
+                <img src="img/logo.webp" alt="У Стендап лого" width="120" height="50" class="d-inline-block align-top">
                 <span class="fs-5 fw-bold ms-lg-2">український стендап у Кельні</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -270,7 +270,7 @@
         <h2 class="section-title">Про нас</h2>
         <div class="row">
             <div class="col-md-6">
-                <img src="img/About us logo.png" alt="Logo" class="img-fluid">
+                <img src="img/About us logo.webp" alt="Logo" class="img-fluid">
             </div>
             <div class="col-md-6">
                 <div id="about-us-content">
@@ -315,7 +315,7 @@
         </div><div class="club" id="standuploch">
             <div class="row">
                 <div class="col-md-3">
-                    <img src="img/standup loch logo.jpg" alt="Stand-Up Loch" class="club-logo">
+                    <img src="img/standup loch logo.webp" alt="Stand-Up Loch" class="club-logo">
                 </div>
                 <div class="col-md-9">
                     <h3>Stand-Up Loch</h3>
@@ -327,7 +327,7 @@
         </div><div class="club" id="standupfromua">
             <div class="row">
                 <div class="col-md-3">
-                    <img src="img/standup from ua logo.jpg" alt="Stand up from UA" class="club-logo">
+                    <img src="img/standup from ua logo.webp" alt="Stand up from UA" class="club-logo">
                 </div>
                 <div class="col-md-9">
                     <h3>Stand up from UA</h3>
@@ -339,7 +339,7 @@
         </div><div class="club" id="ukropstandup">
             <div class="row">
                 <div class="col-md-3">
-                    <img src="img/ukrop logo.jpg" alt="СТЕНДАП КЛУБ UKROP" class="club-logo">
+                    <img src="img/ukrop logo.webp" alt="СТЕНДАП КЛУБ UKROP" class="club-logo">
                 </div>
                 <div class="col-md-9">
                     <h3>СТЕНДАП КЛУБ UKROP</h3>
@@ -351,7 +351,7 @@
         </div><div class="club" id="tu_standup_ua">
             <div class="row">
                 <div class="col-md-3">
-                    <img src="img/tu-stand-up.jpg" alt="ТЮ!" class="club-logo">
+                    <img src="img/tu-stand-up.webp" alt="ТЮ!" class="club-logo">
                 </div>
                 <div class="col-md-9">
                     <h3>ТЮ!</h3>
@@ -363,7 +363,7 @@
         </div><div class="club" id="guchno.comedy">
             <div class="row">
                 <div class="col-md-3">
-                    <img src="img/huchno logo.jpg" alt="Гучно" class="club-logo">
+                    <img src="img/huchno logo.webp" alt="Гучно" class="club-logo">
                 </div>
                 <div class="col-md-9">
                     <h3>Гучно</h3>
@@ -375,7 +375,7 @@
         </div><div class="club" id="standup.prostir">
             <div class="row">
                 <div class="col-md-3">
-                    <img src="img/stand up prostir logo.jpg" alt="Стендап Простір" class="club-logo">
+                    <img src="img/stand up prostir logo.webp" alt="Стендап Простір" class="club-logo">
                 </div>
                 <div class="col-md-9">
                     <h3>Стендап Простір</h3>
@@ -387,7 +387,7 @@
         </div><div class="club" id="uzasny.standup">
             <div class="row">
                 <div class="col-md-3">
-                    <img src="img/usasny stand up logo.jpg" alt="Úžasný стенд ап " class="club-logo">
+                    <img src="img/usasny stand up logo.webp" alt="Úžasný стенд ап " class="club-logo">
                 </div>
                 <div class="col-md-9">
                     <h3>Úžasný стенд ап </h3>
@@ -399,7 +399,7 @@
         </div><div class="club" id="standupkrakow">
             <div class="row">
                 <div class="col-md-3">
-                    <img src="img/suck logo.jpg" alt="SUCK" class="club-logo">
+                    <img src="img/suck logo.webp" alt="SUCK" class="club-logo">
                 </div>
                 <div class="col-md-9">
                     <h3>SUCK</h3>
