--- a/ThankYouPage/WinterStandUp/PaymentUnsuccessful/Index.html
+++ b/ThankYouPage/WinterStandUp/PaymentUnsuccessful/Index.html
@@ -8,8 +8,8 @@
     <meta name="description" content="Помилка при оплаті квитка на Зимовий Стендап у Кельні">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="/img/favicon-full.png">
-    <link rel="shortcut icon" type="image/png" href="/img/favicon-full.png">
+    <link rel="icon" type="image/png" href="/img/favicon-full.webp">
+    <link rel="shortcut icon" type="image/png" href="/img/favicon-full.webp">
 
     <!-- Google Tag Manager -->
     <script>
