--- a/events/abramov-solo-2025-03-18/index.html
+++ b/events/abramov-solo-2025-03-18/index.html
@@ -307,5 +307,9 @@
             });
         }
     </script>
+
+    <!-- Analytics -->
+    <script defer src="https://static.cloudflareinsights.com/beacon.min.js" data-cf-beacon='{"token": "e9e3d01d906d4f06946bb1f72ba15410"}'></script>
+    <script src="/js/analytics.js"></script>
 </body>
 </html>
