--- a/events/open-mic-26-06-25/index.html
+++ b/events/open-mic-26-06-25/index.html
@@ -306,5 +306,9 @@ P.S. Якщо хочеш виступити, напиши нам у дірект
             });
         }
     </script>
+
+    <!-- Analytics -->
+    <script defer src="https://static.cloudflareinsights.com/beacon.min.js" data-cf-beacon='{"token": "e9e3d01d906d4f06946bb1f72ba15410"}'></script>
+    <script src="/js/analytics.js"></script>
 </body>
 </html>
