--- a/events/spring-standup-2025-03-06/index.html
+++ b/events/spring-standup-2025-03-06/index.html
@@ -312,5 +312,9 @@ Zülpicher Str. 39, Köln
             });
         }
     </script>
+
+    <!-- Analytics -->
+    <script defer src="https://static.cloudflareinsights.com/beacon.min.js" data-cf-beacon='{"token": "e9e3d01d906d4f06946bb1f72ba15410"}'></script>
+    <script src="/js/analytics.js"></script>
 </body>
 </html>
