--- a/index.html
+++ b/index.html
@@ -179,43 +179,7 @@
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script type="module" src="js/app.js"></script>
-
-    <!-- Analytics -->
-    <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "e9e3d01d906d4f06946bb1f72ba15410"}'></script>
-
-    <!-- Custom Analytics -->
-    <script>
-        const startTime = Date.now();
-        const GOOGLE_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbxaI9W6B2782WKEOC8dqkoxzEfxjkCSdQUCQ5Nkp6v4uDQQ4_CX2tQbyYUPSHctuZ1Trg/exec';
-
-        function sendAnalytics() {
-            const timeSpent = Math.round((Date.now() - startTime) / 1000);
-            const data = new URLSearchParams({
-                timestamp: new Date().toISOString(),
-                page: window.location.pathname,
-                time: timeSpent,
-                referrer: document.referrer || 'Direct',
-                userAgent: navigator.userAgent,
-                language: navigator.language,
-                screenSize: window.screen.width + 'x' + window.screen.height
-            });
-
-            if (navigator.sendBeacon) {
-                navigator.sendBeacon(GOOGLE_SCRIPT_URL, data);
-            } else {
-                fetch(GOOGLE_SCRIPT_URL + '?' + data.toString(), {
-                    method: 'GET',
-                    mode: 'no-cors'
-                }).catch(() => {});
-            }
-        }
-
-        window.addEventListener('beforeunload', sendAnalytics);
-        document.addEventListener('visibilitychange', () => {
-            if (document.hidden) sendAnalytics();
-        });
-        setTimeout(sendAnalytics, 10000);
-    </script>
+    <!-- Analytics injected by footer.js -->
 </body>
 
 </html>
