--- a/events/meeting-15/index.html
+++ b/events/meeting-15/index.html
@@ -177,7 +177,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item"><a class="nav-link" href="/">Головна</a></li>
-                        <li class="nav-item"><a class="nav-link active" href="/#events">Події</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="/all-events.html">Всі події</a></li>
                         <li class="nav-item"><a class="nav-link" href="/#about-us">Про нас</a></li>
                         <li class="nav-item"><a class="nav-link" href="/other-clubs.html">Інші клуби</a></li>
                     </ul>
