fix LCP priority

--- a/src/index.html
+++ b/src/index.html
@@ -79,7 +79,7 @@
             <div class="container">
                 <div class="hero-event__inner">
                     <div class="hero-event__image">
-                        <img id="hero-event-image" src="" alt="" onclick="openLightbox(this.src)" style="cursor: pointer;">
+                        <img id="hero-event-image" src="" alt="" onclick="openLightbox(this.src)" style="cursor: pointer;" fetchpriority="high">
                     </div>
                     <div class="hero-event__content">
                         <span class="hero-event__badge" id="hero-event-badge"></span>
