reduce critical request chain with modulepreload

--- a/src/all-events.html
+++ b/src/all-events.html
@@ -24,6 +24,14 @@
 
     <!-- Styles -->
     <link rel="stylesheet" href="css/style.css">
+
+    <!-- Module Preloads (parallel loading) -->
+    <link rel="modulepreload" href="js/events.js">
+    <link rel="modulepreload" href="js/components/header.js">
+    <link rel="modulepreload" href="js/components/footer.js">
+    <link rel="modulepreload" href="js/components/event-card.js">
+    <link rel="modulepreload" href="js/utils/constants.js">
+
     <style>
         .pagination-container {
             display: flex;
