--- a/src/index.html
+++ b/src/index.html
@@ -41,6 +41,14 @@
     <!-- Styles -->
     <link rel="stylesheet" href="css/style.css">
 
+    <!-- Module Preloads (parallel loading) -->
+    <link rel="modulepreload" href="js/app.js">
+    <link rel="modulepreload" href="js/events.js">
+    <link rel="modulepreload" href="js/components/header.js">
+    <link rel="modulepreload" href="js/components/footer.js">
+    <link rel="modulepreload" href="js/components/event-card.js">
+    <link rel="modulepreload" href="js/utils/constants.js">
+
     <!-- Schema.org JSON-LD -->
     <script type="application/ld+json">
     {
