--- a/src/other-clubs.html
+++ b/src/other-clubs.html
@@ -23,6 +23,11 @@
 
     <!-- Styles -->
     <link rel="stylesheet" href="css/style.css">
+
+    <!-- Module Preloads (parallel loading) -->
+    <link rel="modulepreload" href="js/components/header.js">
+    <link rel="modulepreload" href="js/components/footer.js">
+
     <style>
         .club-card {
             background: var(--color-bg);
