add image dimensions for better PageSpeed

--- a/src/index.html
+++ b/src/index.html
@@ -87,7 +87,7 @@
             <div class="container">
                 <div class="hero-event__inner">
                     <div class="hero-event__image">
-                        <img id="hero-event-image" src="" alt="" onclick="openLightbox(this.src)" style="cursor: pointer;" fetchpriority="high">
+                        <img id="hero-event-image" src="" alt="" onclick="openLightbox(this.src)" style="cursor: pointer;" fetchpriority="high" width="600" height="800">
                     </div>
                     <div class="hero-event__content">
                         <span class="hero-event__badge" id="hero-event-badge"></span>
@@ -157,7 +157,7 @@
             <div class="container">
                 <h2 class="section-title">Про нас</h2>
                 <div class="about-content">
-                    <img src="img/About us logo.webp" alt="У Стендап логотип" loading="lazy">
+                    <img src="img/About us logo.webp" alt="У Стендап логотип" loading="lazy" width="400" height="400">
                     <div class="about-text">
                         <h3>Місія</h3>
                         <p>Наша місія — розвивати таланти і українську культуру через стендап-комедію. Ми прагнемо просувати українські наративи та ідеї на міжнародній арені, виступаючи не лише українською, а й німецькою та англійською мовами.</p>
