fix thank you page

--- a/src/ThankYouPage/HerbstStandUp/index.html
+++ b/src/ThankYouPage/HerbstStandUp/index.html
@@ -111,7 +111,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Caveat:wght@600&display=swap" rel="stylesheet">
 
     <!-- Shared Base CSS -->
-    <link rel="stylesheet" href="../shared/thank-you-base.css">
+    <link rel="stylesheet" href="/ThankYouPage/shared/thank-you-base.css">
 
     <!-- Autumn Theme Variables -->
     <style>
@@ -244,7 +244,7 @@
     </script>
 
     <!-- Shared JavaScript -->
-    <script src="../shared/thank-you.js"></script>
-    <script src="../shared/invitation-creator.js"></script>
+    <script src="/ThankYouPage/shared/thank-you.js"></script>
+    <script src="/ThankYouPage/shared/invitation-creator.js"></script>
 </body>
 </html>
