--- a/src/ThankYouPage/WinterStandUp/PaymentUnsuccessful/Index.html
+++ b/src/ThankYouPage/WinterStandUp/PaymentUnsuccessful/Index.html
@@ -7,9 +7,12 @@
     <title>Помилка оплати | Зимовий Стендап</title>
     <meta name="description" content="Помилка при оплаті квитка на Зимовий Стендап у Кельні">
 
-    <!-- Favicon -->
-    <link rel="icon" type="image/png" href="/img/favicon-full.webp">
-    <link rel="shortcut icon" type="image/png" href="/img/favicon-full.webp">
+    <!-- Favicon - Google recommends PNG format, multiple of 48px -->
+    <link rel="icon" type="image/png" sizes="48x48" href="/img/favicon-48x48.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/img/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/img/favicon-192x192.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png">
+    <link rel="shortcut icon" href="/img/favicon.ico">
 
     <!-- Google Tag Manager -->
     <script>
