--- a/src/ThankYouPage/WinterStandUp/index.html
+++ b/src/ThankYouPage/WinterStandUp/index.html
@@ -7,9 +7,12 @@
     <title>Дякуємо за купівлю квитка | Зимовий Стендап</title>
     <meta name="description" content="Дякуємо за купівлю квитка на Зимовий Стендап у Кельні">
 
-    <!-- Favicon -->
-    <link rel="icon" type="image/png" href="/img/favicon-full.webp">
-    <link rel="shortcut icon" type="image/png" href="/img/favicon-full.webp">
+    <!-- Favicon - Google recommends PNG format, multiple of 48px -->
+    <link rel="icon" type="image/png" sizes="48x48" href="/img/favicon-48x48.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/img/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/img/favicon-192x192.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png">
+    <link rel="shortcut icon" href="/img/favicon.ico">
 
     <!-- Cloudflare Web Analytics -->
     <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "e9e3d01d906d4f06946bb1f72ba15410"}'></script>
