--- a/src/all-events.html
+++ b/src/all-events.html
@@ -19,8 +19,12 @@
     <meta property="og:image" content="https://www.ustandup.club/img/og-image.webp">
     <meta property="og:locale" content="uk_UA">
 
-    <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="img/favicon.svg">
+    <!-- Favicon - Google recommends PNG format, multiple of 48px -->
+    <link rel="icon" type="image/png" sizes="48x48" href="img/favicon-48x48.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="img/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="img/favicon-192x192.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
+    <link rel="shortcut icon" href="img/favicon.ico">
 
     <!-- Styles -->
     <link rel="stylesheet" href="css/style.css">
