--- a/src/index.html
+++ b/src/index.html
@@ -34,9 +34,12 @@
     <meta name="geo.position" content="50.9375;6.9603">
     <meta name="ICBM" content="50.9375, 6.9603">
 
-    <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="img/favicon.svg">
-    <link rel="apple-touch-icon" href="img/apple-touch-icon.png">
+    <!-- Favicon - Google recommends PNG format, multiple of 48px -->
+    <link rel="icon" type="image/png" sizes="48x48" href="img/favicon-48x48.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="img/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="img/favicon-192x192.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
+    <link rel="shortcut icon" href="img/favicon.ico">
 
     <!-- Styles -->
     <link rel="stylesheet" href="css/style.css">
