navigate to event page by clicking on the title or image

--- a/src/index.html
+++ b/src/index.html
@@ -89,9 +89,9 @@
         <section class="hero-event" id="hero-event" style="display: none;">
             <div class="container">
                 <div class="hero-event__inner">
-                    <div class="hero-event__image">
-                        <img id="hero-event-image" src="" alt="" onclick="openLightbox(this.src)" style="cursor: pointer;" fetchpriority="high" width="600" height="800">
-                    </div>
+                    <a href="" id="hero-event-link" class="hero-event__image">
+                        <img id="hero-event-image" src="" alt="" fetchpriority="high" width="600" height="800">
+                    </a>
                     <div class="hero-event__content">
                         <span class="hero-event__badge" id="hero-event-badge"></span>
                         <h1 class="hero-event__title" id="hero-event-title"></h1>
